Remove the slow KabcBridge::categories(). Instead, populate the category list with Nepomuk tags. This should work, since all categories in contacts get indexed as tags by the Nepomuk contact feeder.

MERGE: none (already in trunk)

BUG: 224037

svn path=/branches/KDE/4.4/kdepim/; revision=1094501