kmail/kmaddrbook.h
@@ -24,17 +24,11 @@
 
 #include <kabc/addressee.h>
 
-
 class KabcBridge {
 public:
   static QStringList addresses();
   static void addresses(QStringList& result);
   static QString expandNickName( const QString& nickName );
-   /**
-    	Returns all categories found in the addressbook.
-	@return A list of the categories
-   */
-    static QStringList categories();
 };
 
 
